<resources>
    <string name="app_name">Skill Smith</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="skillTitle">TextView</string>
    <string name="skillHours">TextView</string>
    <string name="skill_name">TextView</string>
    <string name="textview">TextView</string>
    <string name="timer">TextView</string>
    <string name="timer_button">Timer Button</string>
    <string name="thoughts">thoughts?</string>
    <string name="notes">thoughts on this Session?(Optional)</string>
    <string name="new_skill">New Skill</string>
    <string name="_0_hours">0 Hours</string>
    <string name="hours_already_invested">Hours already invested</string>
    <string name="hint_skill_name">Skill Name</string>
    <string name="add_new_skill">Add Skill</string>
    <string name="skillHint">Name of New Skill</string>
    <string name="hoursHint">Have You Logged Any Previous Hours?</string>
</resources>