<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false"
    android:layout_gravity="center"
    android:background="#1B1E1D1D"
    android:elevation="32dp"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp"
    app:layout_anchorGravity="center"
    app:layout_collapseMode="none"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/add_new_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="164dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="8dp"
                android:text="@string/add_new_skill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hoursAlreadyInvested" />

    <EditText
        android:id="@+id/nameNewSkill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="106dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_skill_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/hoursAlreadyInvested"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hours_already_invested"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/nameNewSkill"
        app:layout_constraintStart_toStartOf="@+id/nameNewSkill"
        app:layout_constraintTop_toBottomOf="@+id/nameNewSkill" />

</androidx.constraintlayout.widget.ConstraintLayout>