<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHoursActivity">

    <TextView
        android:id="@+id/craft_skill_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/skill_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/craft_textView" />

    <ImageButton
        android:id="@+id/time_button"
        android:layout_width="96dp"
        android:layout_height="79dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/timer_button"
        android:onClick="time"
        app:layout_constraintEnd_toEndOf="@+id/timer"
        app:layout_constraintStart_toStartOf="@+id/timer"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:text="0:00:00"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/craft_skill_name" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/notes"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_button" />

    <Button
        android:id="@+id/stop_time_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/timer_button"
        android:onClick="stopTime"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/time_button"
        app:layout_constraintEnd_toEndOf="@+id/time_button"
        app:layout_constraintStart_toStartOf="@+id/time_button"
        app:layout_constraintTop_toTopOf="@+id/time_button"
        app:srcCompat="@android:drawable/ic_lock_idle_alarm" />

    <TextView
        android:id="@+id/craft_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Crafting"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/commit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Commit"
        android:onClick="commitHours"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Cancel"
        android:onClick="cancelSession"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/commit_button"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

</androidx.constraintlayout.widget.ConstraintLayout>